--- a/data/themes/websaur.toml
+++ b/data/themes/websaur.toml
@@ -8,11 +8,11 @@ light = true
 primary = "#7b8296"
 
 # Menu
-menu_primary = "rgb(73, 88, 133)" # 500
+menu_primary = "rgb(73, 88, 133)" # 500 
 menu_text = "#fff"
-menu_text_active = "#a1a1a1" # A100
+menu_text_active = "#b8b8b8" # A100
 menu_title = "#fff"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_even = "rgb(250, 250, 250)"
